--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <ScrollView
+    <androidx.core.widget.NestedScrollView
         android:id="@+id/scrollView"
         android:layout_width="0dp"
         android:layout_height="0dp"
@@ -19,7 +19,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
-            <RelativeLayout
+            <LinearLayout
                 android:id="@+id/headerLayout"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
@@ -39,15 +39,13 @@
 
                 <ImageView
                     android:id="@+id/instalogo"
-                    android:layout_width="160dp"
+                    android:layout_width="0dp"
                     android:layout_height="60dp"
-                    android:layout_marginStart="90dp"
                     android:layout_marginTop="10dp"
-                    android:layout_marginEnd="70dp"
+                    android:layout_weight="1"
                     android:src="@drawable/insta_name"
                     android:scaleX="2"
                     android:scaleY="2"
-                    app:layout_constraintBottom_toTopOf="@+id/recyclerView"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toEndOf="@+id/image"
                     app:layout_constraintTop_toTopOf="parent" />
@@ -56,8 +54,8 @@
                     android:id="@+id/heart"
                     android:layout_width="40dp"
                     android:layout_height="40dp"
-                    android:layout_marginEnd="65dp"
                     android:layout_marginTop="13dp"
+                    android:layout_marginRight="8dp"
                     android:layout_alignParentEnd="true"
                     android:src="@drawable/heart"
                     android:scaleX="0.8"
@@ -71,14 +69,14 @@
                     android:layout_height="40dp"
                     android:layout_marginTop="13dp"
                     android:layout_alignParentEnd="true"
-                    android:layout_marginRight="15dp"
+                    android:layout_marginRight="9dp"
                     android:scaleX="0.8"
                     android:scaleY="0.8"
                     android:src="@drawable/insta_msg"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
 
-            </RelativeLayout>
+            </LinearLayout>
 
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/recyclerView"
@@ -106,7 +104,7 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/recyclerView" />
         </androidx.constraintlayout.widget.ConstraintLayout>
-    </ScrollView>
+    </androidx.core.widget.NestedScrollView>
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/bottombar"
